deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-event-core-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-event-core-app
  template:
    metadata:
      labels:
        app: music-event-core-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret-music-core
      containers:
        - name: music-event-core-app
          image: vitaliypunko/music-event-core:latest
          ports:
            - containerPort: 8080
#          env:
#            - name: SPRING_PROFILES_ACTIVE
#              value: "prod"
          resources:
            limits:
              cpu: "0.3"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3



---
apiVersion: v1
kind: Service
metadata:
  name: music-event-core-app-service
spec:
  selector:
    app: music-event-core-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
